update for decompiler